# canopy

./: .coverage  .env.example  .gitignore  DECISIONS.md  Dockerfile  LESSONS.md  LIMITATIONS.md  Makefile  README.md  models.yaml  pyproject.toml
.github/workflows/: ci.yml
scripts/: capture_screenshots.py  docker_run.sh  run_benchmark.py  run_eval.py  run_ui.py  smoke_test.py  smoke_test_docker.sh
src/canopy/: __init__.py  _json.py  cache.py  config.py  history.py  i18n.py  schema.py
src/canopy/db/: __init__.py  connection.py
src/canopy/locales/: en.py  es.py
src/canopy/models/: __init__.py  _openai_format.py  anthropic.py  azure.py  azure_compat.py  azure_responses.py  azure_responses_llm.py  base.py  llamaindex_compat.py  registry.py
src/canopy/query/: __init__.py  executor.py  fuzzy_match.py  loop.py
src/canopy/ui/: app.py
tests/: conftest.py  test_adversarial_eval.py  test_cache.py  test_config.py  test_db_connection.py  test_eval_queries.py  test_executor.py  test_fuzzy_match.py  test_history.py  test_i18n.py  test_json.py  test_models_azure.py  test_models_azure_new.py  test_models_azure_responses_llm.py  test_models_llamaindex_compat.py  test_models_registry.py  test_models_registry_llm.py  test_query_loop.py  test_query_loop_agent.py  test_schema.py  test_schema_drift.py  test_ui.py
tests/e2e/: conftest.py  test_error_paths.py  test_fuzzy_suggestions.py
tests/eval/: adversarial.py  queries.py
