[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "canopy"
version = "0.1.0"
description = "Natural language query tool for a bioacoustic species-monitoring database."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "gradio>=4.0",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.setuptools.packages.find]
where = ["src"]
