[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "canopy"
version = "0.1.0"
description = "Natural language query tool for a bioacoustic species-monitoring database."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "gradio>=6.0",
    "langdetect>=1.0.9",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]
e2e = ["pytest-playwright>=0.5", "playwright>=1.40"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = ["e2e: end-to-end browser tests — require: make playwright-install"]
filterwarnings = [
    # Gradio uses a renamed Starlette constant — not actionable from canopy's code.
    "ignore:.*HTTP_422_UNPROCESSABLE_ENTITY.*:UserWarning",
    # Pandas 4 deprecation warnings emitted by Gradio's queueing internals.
    "ignore:.*no_silent_downcasting.*",
    "ignore:.*copy keyword is deprecated.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle errors, pyflakes, isort
